--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -5,7 +5,8 @@
 .mainText-loc h1{
   color: rgb(0, 0, 0);
   font-weight: 600;
-  font-size: 3rem;
+  font-size: 4rem;
+  min-width: 600px;
   margin-top: 3rem;
   margin-bottom: 1rem;
 }
@@ -41,7 +42,6 @@ h3{
   margin-left: 2rem;
   padding-top: 2.5rem;
 }
-
 .banner:hover{
   background-color: #4187f0f1;
 }
