--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -18,14 +18,13 @@
   padding-right: 20px !important;
   padding-left: 20px !important;
 }
-.images{
+.image-container{
   margin-top: 2rem;
-  display: flex;
-  /* flex-wrap: wrap; */
+  display: flex; 
   justify-content: center;
 }
 .img-sizes{
-  min-width: 400px;
+  width: auto;
 }
 .banner{
   background-color: #0d6efd ;
@@ -44,4 +43,24 @@ h3{
 }
 .banner:hover{
   background-color: #4187f0f1;
+} 
+
+@media screen and (max-width: 600px){
+  .image-container{
+    flex-wrap: wrap;
+    margin-bottom: 2rem;
+  }
+  .mainText-loc h1{
+    min-width: auto;
+    margin-left: 2rem;
+  }
+  .banner{
+    padding-bottom: 2.5rem;
+  }
+  .card-img{
+    margin-left: 2.6rem;
+  }
+  .btn{
+    margin-left: 2.5rem;
+  }
 }
